--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -1,7 +1,6 @@
 body,
 html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100%;
     width: 100%;
     /* #2fd219 */
     --main-color: blue;
@@ -40,6 +39,23 @@ body {
     background: #555;
 }
 
+input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    margin: 0.5rem 0;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.2rem;
+    color: #555;
+}
+
+a {
+    text-decoration: none;
+}
 
 /* markdown */
 
@@ -203,7 +219,7 @@ input:-webkit-autofill {
     right: 50%;
 }
 
-.input-div.focus>div>h5 {
+.input-div.focus > div > h5 {
     top: -15px;
     font-size: 15px;
     color: var(--main-color);
@@ -226,12 +242,12 @@ input:-webkit-autofill {
     margin-bottom: 10px;
 }
 
-.input-div>div {
+.input-div > div {
     position: relative;
     height: 45px;
 }
 
-.input-div>div>h5 {
+.input-div > div > h5 {
     position: relative;
     text-align: left;
     top: 50%;
@@ -244,23 +260,6 @@ input:-webkit-autofill {
     padding: 0 0.7rem;
 }
 
-input {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    margin: 0.5rem 0;
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 1.2rem;
-    color: #555;
-}
-
-a {
-    text-decoration: none;
-}
 
 .btn {
     display: block;
@@ -306,6 +305,7 @@ a {
     .index-container {
         grid-gap: 3rem;
     }
+
     .programmer img {
         width: 400px;
     }
@@ -315,12 +315,14 @@ a {
     form {
         width: 290px;
     }
+
     .login-container h2 {
         width: 100%;
         height: 100%;
         font-size: 2.4rem;
         margin: 8px 0;
     }
+
     .programmer img {
         width: 400px;
     }
@@ -332,9 +334,11 @@ a {
         height: 100%;
         grid-template-columns: 1fr;
     }
+
     .programmer {
         display: none;
     }
+
     .login-container {
         justify-content: center;
     }
@@ -432,30 +436,38 @@ a {
     .home-space {
         width: 0;
     }
+
     .back-m {
         display: block;
     }
+
     .back {
         display: none;
     }
+
     .mask {
         display: block;
     }
+
     .side-left {
         display: none;
     }
+
     .side-right {
         display: none;
     }
+
     .side-middle {
         width: 100%;
     }
 }
 
 
-
 #root {
     width: 100%;
+}
+
+.react-root {
 }
 
 
@@ -594,7 +606,7 @@ header {
     transition: transform 0.6s ease-out;
 }
 
-.side-drawer-ul li{
+.side-drawer-ul li {
     padding: 1rem auto;
 }
 
@@ -625,7 +637,7 @@ header {
     width: 208px;
 }
 
-.search{
+.search {
     padding: 0 1rem;
 }
 
@@ -716,11 +728,11 @@ header {
     font-size: 20px;
 }
 
-.search-box{
+.search-box {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 60%;
     height: 56px;
     background-color: whitesmoke;
@@ -729,19 +741,19 @@ header {
     border-radius: 16px;
 }
 
-.search-input{
+.search-input {
     width: 90%;
     margin: 0 1rem;
     color: var(--main-color);
     font-size: 24px;
 }
 
-.search-box-svg{
+.search-box-svg {
     position: relative;
     width: fit-content;
     height: fit-content;
     top: 50%;
-    transform: translate(0,-50%);
+    transform: translate(0, -50%);
     float: right;
     margin: 0 2rem;
 }
@@ -775,12 +787,15 @@ header {
     .nav-items {
         display: none;
     }
+
     .nav-user {
         display: none;
     }
+
     .navigation {
         padding: 0 1rem;
     }
+
     .toggle-button {
         display: flex;
     }
@@ -945,15 +960,19 @@ header {
     .topic-description {
         font-size: 1rem;
     }
+
     .tb {
         font-size: 14px;
     }
+
     .query {
         font-size: 1.2rem;
     }
+
     .latest {
         padding-left: 10px;
     }
+
     .latest-details {
         padding-left: 10px;
     }
@@ -963,25 +982,32 @@ header {
     .topic-logo {
         width: 17px;
     }
+
     .topic-logo img {
         width: 100%;
     }
+
     .topic-name {
         font-size: 1rem;
     }
+
     .topic-description {
         font-size: 14px;
     }
+
     .tb {
         padding-top: 3px;
         font-size: 12px;
     }
+
     .latest-details {
         padding-left: 10px;
     }
+
     .query {
         font-size: 14px;
     }
+
     .details {
         font-size: 14px;
     }
@@ -993,32 +1019,41 @@ header {
         margin-left: 3rem;
         margin-right: 3rem;
     }
+
     .topic {
         width: 100%;
     }
+
     .topic-logo {
         width: 10px;
     }
+
     .topic-logo img {
         padding-top: 2.5px;
     }
+
     .topic-name {
         padding-left: 3px;
         font-size: 14px;
     }
+
     .threads-blogs {
         width: 100%;
     }
+
     .topic-description {
         font-size: 12px;
     }
+
     .tb-sign img {
         width: 10px;
     }
+
     .tb {
         margin-top: 0;
         padding-top: 0;
     }
+
     .latest {
         visibility: hidden;
         clear: both;
@@ -1032,15 +1067,19 @@ header {
         margin-left: 3rem;
         margin-right: 3rem;
     }
+
     .threads-blogs {
         margin-top: 0.5px;
     }
+
     .threads {
         width: 50%;
     }
+
     .blogs {
         padding: 0 0;
     }
+
     .tb {
         font-size: 10px;
         justify-content: center;
@@ -1053,15 +1092,19 @@ header {
         margin-left: 3rem;
         margin-right: 3rem;
     }
+
     .threads-blogs {
         margin-top: 0.5px;
     }
+
     .threads {
         width: 50%;
     }
+
     .blogs {
         padding: 0 0;
     }
+
     .tb {
         font-size: 10px;
         justify-content: center;
@@ -1298,15 +1341,52 @@ header {
     width: 55%;
 }
 
-.rendered-values-blogs {
-    height: 100%;
-    width: 100%;
-    margin-top: 907px;
-}
-
 .blog-svg-m {
     display: none;
 }
+
+.create-blog-card {
+    display: flex;
+    justify-content: center;
+}
+
+
+.blog-container {
+    padding: 10px;
+    background: white;
+    width: 80%;
+    box-sizing: border-box;
+    margin-top: 10px;
+    min-height: 800px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+}
+
+.blog-container .create-blog-input {
+    display: flex;
+}
+
+.blog-container textarea {
+    box-sizing: border-box;
+    position: relative;
+    padding: 10px;
+    border: none;
+    width: 100%;
+    outline: none;
+}
+
+.blog-container textarea:focus {
+    border: none;
+}
+
+.create-blog-input-title textarea {
+    font-size: 2em;
+    font-weight: bold;
+    text-wrap: none;
+}
+
 
 @media (max-width: 1024px) {
     .heading-blog {
@@ -1316,19 +1396,27 @@ header {
         position: fixed;
         z-index: -1;
     }
+
+    .blog-container {
+        width: 90%
+    }
+
     .heading-blog h1 {
         color: var(--main-color);
         font-size: 100px;
         display: flex;
     }
+
     .text-blog {
         position: fixed;
         z-index: -1;
     }
+
     .text-blog p {
         color: #555;
         font-size: 25px;
     }
+
     .blog-svg {
         z-index: -2;
         position: fixed;
@@ -1336,6 +1424,7 @@ header {
         top: 20rem;
         left: 30%;
     }
+
     .blog-svg img {
         width: 60%;
     }
@@ -1345,12 +1434,15 @@ header {
     .heading-blog h1 {
         font-size: 500%;
     }
+
     .blog-svg {
         display: none;
     }
+
     .text-blog p {
         font-size: 16px;
     }
+
     .blog-svg-m {
         top: 50%;
         left: 20%;
@@ -1358,6 +1450,7 @@ header {
         display: block;
         z-index: -2;
     }
+
     .blog-svg-m img {
         width: 80%;
     }
@@ -1482,28 +1575,35 @@ header {
     .dev-div {
         height: 400px;
     }
+
     .details {
         width: 60%;
         margin-left: 2rem;
     }
+
     .head h1 {
         font-size: 50px;
     }
+
     .head-alt h1 {
         font-size: 50px;
     }
+
     .head-details {
         font-size: 28px;
     }
+
     .head-details-alt {
         font-size: 28px;
     }
+
     .explore-btn {
         width: 7rem;
         height: 2.5rem;
         margin: 4rem 0;
         font-size: 1rem;
     }
+
     .explore-btn-alt {
         width: 7rem;
         height: 2.5rem;
@@ -1516,21 +1616,27 @@ header {
     .dev-div {
         height: 400px;
     }
+
     .div-svg {
         display: none;
     }
+
     .details {
         width: 100%;
     }
+
     .head h1 {
         font-size: 48px;
     }
+
     .head-alt h1 {
         font-size: 48px;
     }
+
     .head-details {
         font-size: 16px;
     }
+
     .head-details-alt {
         font-size: 16px;
     }
@@ -1600,16 +1706,20 @@ header {
     .user-card {
         height: 130px;
     }
+
     .user-back {
         height: 65px;
     }
+
     .user-circle {
         width: 40px;
         height: 40px;
     }
+
     .user-details-home {
         font-size: 8px;
     }
+
     .user-name {
         font-size: 12px;
         margin-top: 30px;
@@ -1657,6 +1767,7 @@ header {
     .create-box {
         height: 60px;
     }
+
     .create-button {
         height: 28px;
         font-size: 12px;
@@ -1719,13 +1830,16 @@ header {
     .hashtag-box {
         height: 155px;
     }
+
     .hash-head {
         font-size: 8px;
     }
+
     .hashes {
         width: 44px;
         height: 24px;
     }
+
     .text {
         font-size: 8px;
     }
@@ -1778,9 +1892,11 @@ header {
     .activity-head {
         font-size: 8px;
     }
+
     .number {
         font-size: 36px;
     }
+
     .number-detail {
         font-size: 8px;
     }
@@ -2050,7 +2166,8 @@ button {
     position: relative;
 }
 
-@media (max-width: 1024px) {}
+@media (max-width: 1024px) {
+}
 
 @media (max-width: 786px) {
     .i .i-text {
@@ -2077,6 +2194,43 @@ button {
 }
 
 
+.search-svg {
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 7px;
+    width: fit-content;
+    height: fit-content;
+}
+
+.search-text {
+    position: relative;
+    width: 80%;
+    height: 32px;
+    font-size: 18px;
+    line-height: 180%;
+    color: var(--main-color);
+    left: 52px;
+    margin: 0 0;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+
+.search-svg button {
+    outline: none;
+    background: none;
+    border: none;
+}
+
+@media (max-width: 425px) {
+    .home-search {
+        border: none;
+    }
+
+    .search-text {
+        left: 16px;
+    }
+}
 
 
 /*comment-container.js*/
@@ -2264,29 +2418,37 @@ textarea:focus {
     background: transparent;
 }
 
-.create-blog-btn {
-    margin-top: 1%;
-    display: block;
-    width: 6.5rem;
-    height: 2.5rem;
-    border-radius: 4px;
+.create-blog-button-group {
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     outline: none;
-    border-color: var(--main-color);
-    color: var(--main-color);
-    font-size: 1rem;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
+    -webkit-user-select: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 90%;
 }
 
-.create-blog-btn:hover {
+.create-blog-button {
+    margin: 1% 1%;
+    display: block;
+    padding: 10px 10px;
+    border-radius: 100px 100px;
+    cursor: pointer;
+    outline: none;
+    border-color: var(--main-color);
+    text-align: center;
+    vertical-align: center;
+    color: var(--main-color);
+    font-size: 1rem;
+    border: 2px solid var(--main-color);
+}
+
+.create-blog-button:hover {
     background-color: var(--main-color);
     color: var(--sec-color);
     transition: background-color 0.3s ease-in, color 0.3s ease-in;
-}
-
-.side {
-    width: 20%;
 }
 
 .rendered-values-blog {
@@ -2294,14 +2456,29 @@ textarea:focus {
     position: relative;
     margin-left: 5rem;
     margin-right: 5rem;
-    display: flex;
     justify-content: center;
+    display: flex;
+    flex-flow: column nowrap;
 }
+
+@media (max-width: 425px) {
+    .rendered-values-blog {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+}
+
+.side {
+    width: 20%;
+}
+
 
 @media (max-width: 425px) {
     .side {
         display: none;
     }
+
     .textarea textarea {
         left: 50%;
         transform: translate(-50%, 0);
@@ -2438,16 +2615,19 @@ textarea:focus {
     .indexforum-first-box {
         flex-direction: column;
     }
+
     .indexforum-question {
         padding: 0.5rem;
         width: 100%;
         font-size: 14px;
     }
+
     .indexforum-user {
         padding: 0.5rem;
         width: 100%;
         font-size: 13px;
     }
+
     .indexforum-time {
         padding: 0.5rem;
         width: 100%;
@@ -2483,9 +2663,6 @@ textarea:focus {
 .indexforum-second-box ul li {
     padding: 3px 0;
 }
-
-
-
 
 
 .c4-blog {
@@ -2722,7 +2899,7 @@ textarea:focus {
     margin-bottom: 30px;
     position: relative;
     left: 50%;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
 }
 
 .bio h2 {
@@ -2732,7 +2909,7 @@ textarea:focus {
     margin: 0 auto;
 }
 
-.bio{
+.bio {
     text-align: center;
     margin: 0 10px;
 }
@@ -2879,38 +3056,38 @@ textarea:focus {
 
 /*Search-page.jsx*/
 
-.search-page{
+.search-page {
     width: 75%;
     margin: 100px auto;
 }
 
-.heading-search{
+.heading-search {
     width: 75%;
     position: relative;
     margin: auto;
 }
 
-.heading{
+.heading {
     margin: auto;
     position: relative;
     display: flex;
 }
 
-.heading h1,h2,h3{
+.heading h1, h2, h3 {
     position: relative;
     font-weight: lighter;
     width: fit-content;
     color: var(--main-color);
 }
 
-.search-page-flex{
+.search-page-flex {
     margin: auto;
     width: 75%;
     position: relative;
     display: flex;
 }
 
-.search-card{
+.search-card {
     position: relative;
     margin: .5em 0;
     width: fit-content;
@@ -2919,18 +3096,18 @@ textarea:focus {
     padding: 1em 1em;
 }
 
-.sub-heading{
+.sub-heading {
     margin: 1em 0;
     font-size: 0.9em;
     line-height: 1.5em;
     font-weight: lighter;
 }
 
-.search-right{
+.search-right {
     width: 75%;
 }
 
-.search-hash{
+.search-hash {
     width: fit-content;
     border-radius: 4px;
     padding: 2px 10px;
@@ -2938,9 +3115,10 @@ textarea:focus {
     background: var(--main-color);
 }
 
-.categories-comp{
+.categories-comp {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .tags {
     font: var(--secondary-font);
     padding: 0;
@@ -2954,6 +3132,7 @@ textarea:focus {
     float: left;
     display: inline-block;
 }
+
 .tags li a {
     float: left;
     display: block;
@@ -2962,35 +3141,42 @@ textarea:focus {
     color: gray;
     background: rgba(0, 0, 0, 0.05);
 }
+
 .tags li a:hover {
     color: #fff;
     background: var(--main-color);
 }
-.list-unstyled li a{
+
+.list-unstyled li a {
     color: #ffffff;
     font-weight: lighter;
     font-size: 20px;
 }
-.list-unstyled{
+
+.list-unstyled {
     list-style: none;
     padding: 0 0;
 }
-.list-unstyled li{
+
+.list-unstyled li {
     padding: 5px;
 }
-.latest-post-card{
+
+.latest-post-card {
     width: 100%;
     height: 70px;
     border: 1px solid rgba(100, 100, 100, 0.5);
     display: flex;
     margin-bottom: 28px;
 }
+
 .latest-post-card img {
     width: 33.3333%;
     position: relative;
     float: left;
     height: 100%;
 }
+
 .latest-post-card-details {
     position: relative;
     width: 66.6666%;
