--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -24,7 +24,9 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 3px;
+    width: 4px;
+    height: 4px;
+    border-radius: 2px;
 }
 
 ::-webkit-scrollbar-track {
@@ -32,7 +34,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--main-color);
+    background: var(--main-color-lay);
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -55,6 +57,10 @@ input {
 
 a {
     text-decoration: none;
+}
+
+textarea {
+    resize: none;
 }
 
 /* markdown */
@@ -86,27 +92,27 @@ a {
 }
 
 .markdown h1 {
-    margin: 0 0 0.67em 0;
+    margin: 0.67em 0 0.67em 0;
 }
 
 .markdown h2 {
-    margin: 0 0 0.83em 0;
+    margin: 0.83em 0 0.83em 0;
 }
 
 .markdown h3 {
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
 }
 
 .markdown h4 {
-    margin: 0 0 1.33em 0;
+    margin: 1.33em 0 1.33em 0;
 }
 
 .markdown h5 {
-    margin: 0 0 1.67em 0;
+    margin: 1.67em 0 1.67em 0;
 }
 
 .markdown h6 {
-    margin: 0 0 2.33em 0;
+    margin: 2.33em 0 2.33em 0;
 }
 
 .markdown hr {
@@ -115,11 +121,11 @@ a {
 }
 
 .markdown menu {
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
 }
 
 .markdown ol {
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
 }
 
 .markdown p {
@@ -127,14 +133,19 @@ a {
 }
 
 .markdown pre {
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
     padding: 0.5em;
     background: #282c34;
+    overflow-x: scroll;
     color: #abb2bf;
 }
 
 .markdown ul {
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
+}
+
+.markdown img {
+    max-width: 100%;
 }
 
 
@@ -1345,7 +1356,50 @@ header {
     display: none;
 }
 
-.create-blog-card {
+.single-blog-button-group {
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    outline: none;
+    -webkit-user-select: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 90%;
+}
+
+.single-blog-button {
+    margin: 1% 1%;
+    display: block;
+    padding: 10px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+    border-color: var(--main-color);
+    text-align: center;
+    vertical-align: center;
+    color: var(--main-color);
+    font-size: 1rem;
+    border: 2px solid var(--main-color);
+}
+
+.single-blog-button:hover {
+    background-color: var(--main-color);
+    color: var(--sec-color);
+    transition: background-color 0.3s ease-in, color 0.3s ease-in;
+}
+
+.rendered-values-blog {
+    margin-top: 5rem;
+    position: relative;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    justify-content: center;
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.single-blog-card {
     display: flex;
     justify-content: center;
 }
@@ -1358,12 +1412,12 @@ header {
     margin-top: 10px;
     min-height: 800px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
+    width: 80%;
     display: flex;
     flex-direction: column;
-    flex: 1 0 auto;
 }
 
-.blog-container .create-blog-input {
+.blog-container .single-blog-input {
     display: flex;
 }
 
@@ -1380,32 +1434,69 @@ header {
     border: none;
 }
 
-.create-blog-input-title textarea {
+.single-blog-input-title textarea {
     font-size: 2em;
     font-weight: bold;
     text-wrap: none;
 }
 
-.create-blog-input-tags textarea {
+.single-blog-input-tags textarea {
     font-size: 1.3em;
 }
 
-.create-blog-input-content {
+.single-blog-input-content {
     flex: 1 0 auto;
 }
 
-.create-blog-input-content textarea {
+.single-blog-input-content textarea {
     font-size: 1.1em;
 }
 
-.create-blog-container {
+.single-blog-container {
     width: 100%;
+    justify-content: center;
+    display: flex;
     box-sizing: border-box;
     margin-bottom: 20px;
 }
 
-.create-blog-preview {
+.single-blog-preview {
     width: 100%;
+}
+
+.single-blog {
+    padding: 20px 10px 10px 10px;
+}
+
+.single-blog .single-blog-heading {
+    margin: 1em 0 2em 0;
+}
+
+.single-blog .single-blog-cover-image {
+    width: 100%;
+}
+
+.single-blog .single-blog-tags {
+    margin: 1em 0 2em 0;
+    padding: 2px 20px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.single-blog .single-blog-tags .single-blog-single-tag {
+    display: block;
+    margin: 2px;
+    padding: 2px 4px;
+    background: var(--main-color);
+    color: var(--sec-color);
+    background-size: 2px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.single-blog .single-blog-content {
+    padding: 2px 20px;
+    margin: 1em 0 2em 0;
 }
 
 
@@ -1416,9 +1507,6 @@ header {
         left: 15%;
         position: fixed;
         z-index: -1;
-    }
-
-    .blog-container {
     }
 
     .heading-blog h1 {
@@ -1447,6 +1535,24 @@ header {
 
     .blog-svg img {
         width: 60%;
+    }
+}
+
+@media (max-width: 768px) {
+    .blog-container {
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .single-blog-container {
+        width: 100%;
+    }
+
+    .rendered-values-blog {
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
 
@@ -2414,79 +2520,12 @@ button {
     display: flex;
 }
 
-textarea {
-    resize: none;
-}
-
-textarea:invalid {
-    border: 2px dashed red;
-}
-
-textarea:valid {
-    border-radius: 8px;
-}
-
-textarea:focus {
-    border: 2px solid var(--main-color);
-}
-
 .textarea textarea {
     position: relative;
     margin: 0 2%;
     width: 60%;
     height: 700px;
     background: transparent;
-}
-
-.create-blog-button-group {
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    outline: none;
-    -webkit-user-select: none;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    width: 90%;
-}
-
-.create-blog-button {
-    margin: 1% 1%;
-    display: block;
-    padding: 10px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    outline: none;
-    border-color: var(--main-color);
-    text-align: center;
-    vertical-align: center;
-    color: var(--main-color);
-    font-size: 1rem;
-    border: 2px solid var(--main-color);
-}
-
-.create-blog-button:hover {
-    background-color: var(--main-color);
-    color: var(--sec-color);
-    transition: background-color 0.3s ease-in, color 0.3s ease-in;
-}
-
-.rendered-values-blog {
-    margin-top: 5rem;
-    position: relative;
-    margin-left: 5rem;
-    margin-right: 5rem;
-    justify-content: center;
-    display: flex;
-    flex-flow: column nowrap;
-}
-
-@media (max-width: 425px) {
-    .rendered-values-blog {
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-
 }
 
 .side {
@@ -2505,6 +2544,8 @@ textarea:focus {
         width: 100%;
         margin: 0 0;
     }
+
+
 }
 
 
@@ -3093,7 +3134,7 @@ textarea:focus {
     display: flex;
 }
 
-.heading h1, h2, h3 {
+.heading h1, .heading h2, .heading h3 {
     position: relative;
     font-weight: lighter;
     width: fit-content;
